--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
@@ -1,7 +1,7 @@
 @external hidePreview;
 
 /* The height and width are set as inline style. */
-.previewDialog {
+div.previewDialog {
 	position:absolute;
 	top:0px;
 	left:0px;
