--- a/src-gwt/org/opencms/gwt/client/ui/css/general.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/general.css
@@ -34,7 +34,7 @@
 	white-space: normal;
 }
 
-.toolTip{
+div.toolTip{
 	position: absolute;
 	z-index: value("constants.css.zIndexDND");
 	border: 1px solid value("constants.css.borderColor");
